# FastDeploy

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindONNXRuntime.cmake  Findonnxruntime.cmake  paddle2onnx.cmake
fastdeploy/: fastdeploy_model.cc  runtime.cc  runtime.h
fastdeploy/backends/ort/: ort_backend.cc  ort_backend.h  utils.h
fastdeploy/backends/ort/ops/: adaptive_pool2d.cc  adaptive_pool2d.h  multiclass_nms.cc  multiclass_nms.h
fastdeploy/core/: config.h  fd_tensor.cc
fastdeploy/utils/: utils.cc  utils.h
fastdeploy/vision/common/processors/: base.h  mat.cc
fastdeploy/vision/detection/ppdet/: base.h
fastdeploy/vision/ocr/ppocr/: rec_postprocessor.cc
fastdeploy/vision/ocr/ppocr/utils/: ocr_postprocess_op.h  ocr_utils.h
